<resources>
    <string name="app_name">Retailer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_about">A Props</string>
    <string name="menu_singout">Déconnexion</string>
    <string name="btn_add_new_user_text">Ajouter Un Nouvel Utilisateur</string>
    <string name="btn_visit_user_text">Visiter l\'utilisateur</string>
    <string name="codebar_title_text">Scan CodeBar</string>
    <string name="codebar_scan_btn_text">Commencez Votre Analyse</string>
    <string name="client_name">Nom Complet</string>
    <string name="client_tel">Numéro De Téléphone</string>
    <string name="client_email">Email</string>
    <string name="client_address">Adresse Du Client</string>
    <string name="address_title_text">Informations Sur l\'adresse</string>
    <string name="txt_city">Ville</string>
    <string name="txt_region">Région</string>
    <string name="btn_take_pic_text">Prendre Une Photo</string>
    <string name="btn_text_yes">Oui</string>
    <string name="btn_text_no">Non</string>
    <string name="periority_title_text">Propriétaire</string>
    <string name="satisfaction_title_text">Satisfaction</string>
    <string name="interests_title_text">Interesse Assurance Maladie Et CNSS</string>
    <string name="marks_title_text">Visibilité</string>
    <string name="check_text_inwi">Inwi</string>
    <string name="check_text_orng">Orng</string>
    <string name="check_text_iam">Iam</string>
    <string name="check_text_taba">Taba</string>
    <string name="author_marks">Autre Potence</string>
    <string name="dealer_title_text">Dealers Et Recharges</string>
    <string name="cims_title_text">Les Cart Sim</string>
    <string name="mobile_title_text">Mobile Money</string>
    <string name="txt_activation">Activation</string>
    <string name="txt_recharge">Recharge</string>
    <string name="txt_adventageous">Adventageous</string>
    <string name="txt_qte_max">Qte Max</string>
    <string name="txt_prix_unit">Prix U</string>
    <string name="txt_intersse">Intersse</string>
    <string name="txt_propose">Propose</string>
    <string name="txt_telephony">Telephony</string>
    <string name="telephony_title_text">Telephony</string>
    <string name="btn_bas_gamme_text">Bas Gamme</string>
    <string name="btn_haut_gamme_text">Haut Gamme</string>
    <string name="text_accessoire_title">Accessoire</string>
    <string name="btn_add_user_valid">Terminer</string>
    <string name="title_activity_login">Se Connecter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot De Passe</string>
    <string name="action_sign_in">Connexion Ou Inscription</string>
    <string name="action_sign_in_short">Se Connecter</string>
    <string name="welcome">Bienvenu !</string>
    <string name="invalid_username">Pas Un Nom D\'utilisateur Valide</string>
    <string name="invalid_password">Le Mot De Passe Doit être > 5 Caractères</string>
    <string name="login_failed">Échec De La Connexion</string>
    <string name="text_login_title">S\'identifier</string>
    <string name="txt_username_hint">Nom d\'utilisateur</string>
    <string name="txt_password_hint">Mote De Pass</string>
    <string name="btn_login_title">S\'identifier</string>
    <string name="shared_name">retailer</string>
    <string name="text_remark_title">Remarque</string>
    <string name="local_title_text">Localisation Gps</string>
    <string name="btn_local_text">Obtenir La Localisation Du Client</string>
    <string name="clientType_title_text">Nature Reteal</string>
    <string name="rechareg_express_text">Express</string>
    <string name="rechrge_grattage_text">Grattage</string>
    <string name="rechareg_chefredaffaire_text">Chefre</string>
    <string name="client_error_text">Erreur de connexion ou ce client existe déjà</string>
    <string name="client_timeOut_text">Erreur TimeOut</string>
    <string name="gps_msg_text">Appuyez Sur Le Bouton Jusqu\'à Ce Que Les Coordonnées Apparaissent Ici</string>


</resources>
