<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:id="@+id/txtloginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_login_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                />
            <LinearLayout
                android:id="@+id/usernameContainner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtloginTitle"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_person"/>
                <EditText
                    android:id="@+id/loginUsername"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/txt_username_hint"
                    android:textAlignment="center"
                    android:inputType="text"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/passContainner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameContainner"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_key"/>
                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/txt_password_hint"
                    android:textAlignment="center"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <Button
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passContainner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange_round"
                android:layout_marginTop="20dp"
                android:text="@string/btn_login_title"
                android:textColor="@color/colorwhite"
                android:onClick="Login"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>