<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/mobileMonyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mobile Mony name"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_intersse"
                        android:layout_weight="1"
                        />
                    <RadioGroup
                        android:id="@+id/radioInterests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:tag="interest"
                        >

                        <RadioButton
                            android:id="@+id/btnInterestsYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_text_yes"
                            android:checked="false"
                            />

                        <RadioButton
                            android:id="@+id/btnInterestsNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_text_no"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:checked="true"/>


                    </RadioGroup>

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_propose"
                        android:layout_weight="1"
                        />
                    <RadioGroup
                        android:id="@+id/radioPropose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:tag="propose"
                        >

                        <RadioButton
                            android:id="@+id/btnProposeYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_text_yes"
                            android:checked="false"
                            />

                        <RadioButton
                            android:id="@+id/btnProposeNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_text_no"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:checked="true"/>


                    </RadioGroup>

                </TableRow>
            </TableLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>